2003-04-20  Bruno Haible  <bruno@clisp.org>

	* open-po.h (open_po_file): Add argument 'exit_on_error'.
	* open-po.c (try_open_po_file): Renamed from open_po_file.
	(open_po_file): New function.
	* po-lex.h (lex_end): Change return type to void.
	(lex_open, lex_close): Remove declarations.
	* po-lex.c (lex_end): Change return type to void.
	(lex_open, lex_close): Remove functions.
	* read-po-abstract.c (po_scan_file): Inline lex_open and lex_close.
	Reuse po_scan code.

2003-04-14  Bruno Haible  <bruno@clisp.org>

	* hostname.c (usage): Split strings: use one string per option
	description.
	* msgattrib.c (usage): Likewise.
	* msgcat.c (usage): Likewise.
	* msgcmp.c (usage): Likewise.
	* msgcomm.c (usage): Likewise.
	* msgconv.c (usage): Likewise.
	* msgen.c (usage): Likewise.
	* msgexec.c (usage): Likewise.
	* msgfilter.c (usage): Likewise.
	* msgfmt.c (usage): Likewise.
	* msggrep.c (usage): Likewise.
	* msginit.c (usage): Likewise.
	* msgmerge.c (usage): Likewise.
	* msgunfmt.c (usage): Likewise.
	* msguniq.c (usage): Likewise.
	* urlget.c (usage): Likewise.
	* xgettext.c (usage): Likewise.

2003-04-13  Bruno Haible  <bruno@clisp.org>

	Unify three PO file parsers.
	* read-po-abstract.h: Renamed from po.h.
	(abstract_po_reader_class_ty): Renamed from po_method_ty.
	(abstract_po_reader_ty): Renamed from po_ty.
	(ABSTRACT_PO_READER_TY): Renamed from PO_BASE_TY.
	(po_reader_alloc): Renamed from po_alloc.
	(po_reader_free): Renamed from po_free.
	* read-po-abstract.c: Renamed from po.c.
	(po_reader_alloc): Renamed from po_alloc.
	(po_reader_free): Renamed from po_free.
	(call_parse_brief): Renamed from po_parse_brief.
	(call_parse_debrief): Renamed from po_parse_debrief.
	(call_directive_domain): Renamed from po_directive_domain.
	(call_directive_message): Renamed from po_directive_message.
	(call_comment): Renamed from po_comment.
	(call_comment_dot): Renamed from po_comment_dot.
	(call_comment_filepos): Renamed from po_comment_filepos.